--- a/Leukemia_Classification.ipynb
+++ b/Leukemia_Classification.ipynb
@@ -6,7 +6,7 @@
       "provenance": [],
       "gpuType": "V28",
       "mount_file_id": "1loOrgg_jSJ5UZ0Tb4Wn9aBzHUM6KZl34",
-      "authorship_tag": "ABX9TyN2BpUTDIF/sDXjz3bu3F15",
+      "authorship_tag": "ABX9TyPGS0hnJc+8jL0KGqH3ztwL",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,7 +31,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "id": "R_REeEiVB9sG",
         "colab": {
@@ -3296,13 +3296,10 @@
         "import zipfile\n",
         "import os\n",
         "\n",
-        "# Path to the uploaded zip file (adjust if needed)\n",
         "zip_file_path = '/content/drive/MyDrive/Blood cell Cancer [ALL].zip'\n",
         "\n",
-        "# Directory to extract the contents\n",
         "extract_dir = '/content/drive/MyDrive/Blood cell Cancer [ALL]'\n",
         "\n",
-        "# Extracting the zip file\n",
         "with zipfile.ZipFile(zip_file_path, 'r') as zip_ref:\n",
         "    zip_ref.extractall(extract_dir)\n",
         "\n",
@@ -3329,7 +3326,7 @@
       "metadata": {
         "id": "XT6IEjZEEuG5"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3359,7 +3356,7 @@
       "metadata": {
         "id": "inH7z4UMCo0f"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3375,7 +3372,7 @@
         "id": "ZZ-czznfTUFi",
         "outputId": "be35ffc3-c35d-4a90-968b-0a3aadead714"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3676,7 +3673,7 @@
         "id": "sqHTjrX6TW7Z",
         "outputId": "1ebe3978-9984-415e-c6c9-9848277af3e1"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3975,7 +3972,7 @@
         "id": "UPlFei0mTYn4",
         "outputId": "6646d754-7a71-4e18-cd0c-7af8176f043d"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4001,7 +3998,7 @@
         "id": "lCgr2ZrTTaZY",
         "outputId": "2e95ccf2-5845-4f25-faeb-786d89a9a085"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4027,7 +4024,7 @@
         "id": "mSWZQYDcTcVe",
         "outputId": "875b8550-38ef-425a-f322-e80b383d3eea"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4054,7 +4051,7 @@
         "id": "iOB23nVJTdlX",
         "outputId": "b58ca4ef-ec0d-4c31-ce39-9659578071fc"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4141,7 +4138,7 @@
         "id": "ODPKtPKkTfeT",
         "outputId": "a540ef89-52b0-45fb-c501-471cdf7809ba"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4211,7 +4208,7 @@
         "id": "u_qSUPPsThm8",
         "outputId": "ee7372c7-b8c1-4738-e619-0e8765dd0759"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -4238,7 +4235,7 @@
         "id": "iTckNxpITw27",
         "outputId": "0895dd9d-49ab-400a-ed32-723f6aa8073f"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4271,7 +4268,7 @@
       "metadata": {
         "id": "oxF1YX9oT0yf"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4283,7 +4280,7 @@
       "metadata": {
         "id": "Lx_ZrhNQUqDX"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4299,7 +4296,7 @@
         "id": "tQSRztn_UrpH",
         "outputId": "4e9d245e-07a5-4491-c92e-1778bfacc3a0"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4330,7 +4327,7 @@
         "id": "oGwsCsC5UsqB",
         "outputId": "545838c2-1638-4641-a9e5-537515febed5"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4724,7 +4721,7 @@
       "metadata": {
         "id": "KriYJgssUvWu"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4740,7 +4737,7 @@
         "id": "05e53nzHUxl8",
         "outputId": "de193cd5-1614-4a99-837b-e259c9a7ce04"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5159,7 +5156,7 @@
         "id": "9YEXVbgHU2b3",
         "outputId": "060f071a-ca17-4ad3-dce2-bcf0c09fa31b"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5186,7 +5183,7 @@
         "id": "OlD1sDUdVKtC",
         "outputId": "00636df0-c524-4af1-bd13-5518ae1c29bf"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5260,7 +5257,7 @@
       "metadata": {
         "id": "YVDJSyR9VNlJ"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -5299,7 +5296,7 @@
         "id": "ZPYWp-PGVP_D",
         "outputId": "a37e19bb-9a5f-4b21-a6f3-799a64e422d1"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5318,7 +5315,7 @@
       "metadata": {
         "id": "lPkrgFEZVVWS"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -5343,7 +5340,7 @@
       "metadata": {
         "id": "GpmvlrvbVZoX"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -5399,7 +5396,7 @@
         "id": "lR8ha5qAVeEy",
         "outputId": "26282ae9-492f-45e7-ec07-0e554c9561d6"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5422,7 +5419,7 @@
       "metadata": {
         "id": "mnD5UzipVgj4"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -5441,7 +5438,7 @@
         "id": "3ECONgDZVjgW",
         "outputId": "c64b96bb-3d2c-4633-ba46-8c1e811be996"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5460,7 +5457,7 @@
       "metadata": {
         "id": "sAdnXZ6pVmJ6"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -5518,7 +5515,7 @@
         "id": "1CU5dnZUVwes",
         "outputId": "562290eb-bd19-4220-ace9-461eaeb3fe9d"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5548,7 +5545,7 @@
         "id": "QzpdIggKV0hZ",
         "outputId": "48d624f3-1806-4ee8-f695-0f5752a2ca86"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5595,7 +5592,7 @@
         "id": "x_2KkvzGWCGO",
         "outputId": "7a3c53b3-d6c7-412d-ce53-6fc4bd26d6b1"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -5628,13 +5625,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "GRAFiyLhaHbY",
         "outputId": "bc9ea5a8-1ad9-4efb-9e4b-fd6845405015"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5653,13 +5649,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "7-dIarBfaJoL",
         "outputId": "570cb391-bfc1-4948-e744-1133b90f9d80"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5688,7 +5683,7 @@
       "metadata": {
         "id": "3m9kkLNCaNV0"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -5709,7 +5704,7 @@
         "id": "YQYfEjpgaPUT",
         "outputId": "519cdda5-8440-4e5b-985a-897d01693156"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -5772,7 +5767,7 @@
       "metadata": {
         "id": "0fN_JA9qaQ-a"
       },
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -5788,13 +5783,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "Qv2q_kfoaTVF",
         "outputId": "2e6b18d1-448c-41c3-ca78-241f78701ec3"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5841,7 +5835,7 @@
         "id": "YfBiXQiCaZ04",
         "outputId": "154d92f6-a636-4573-ec85-31bc2dbb8d38"
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -5874,13 +5868,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "SCljWEldfnb3",
         "outputId": "97f47c85-417b-4a0f-d525-1b4fb5a21e79"
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5899,13 +5892,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "vTE-hqT7fvaM",
         "outputId": "ca5e1bab-5244-4a76-c4a8-82d68b73676e"
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5934,7 +5926,7 @@
       "metadata": {
         "id": "MRocTQmDf0Kq"
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -5955,7 +5947,7 @@
         "id": "m_UhN8-Qf1Af",
         "outputId": "681b40e2-54c3-4cd0-9e40-f240dda909f7"
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -6019,13 +6011,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "5qO2CA_Bf4D_",
         "outputId": "5a6c9542-4196-44c9-8cb5-a5b06368ca43"
       },
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6057,13 +6048,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "9ZxutYzagr33",
         "outputId": "7ae22b83-d511-4b66-c625-fc108bc0b172"
       },
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6110,7 +6100,7 @@
         "id": "M_UVxAh5gt5z",
         "outputId": "6864a150-2024-4e3f-8b1e-c06033c81659"
       },
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -6143,13 +6133,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "3rKsXIsPhKn_",
         "outputId": "a43bbcdf-b37a-473a-8355-e1391c54c135"
       },
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6168,13 +6157,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "hPnN2ZqRiX5g",
         "outputId": "45c10062-6cc6-4d0c-b451-a583084cb74f"
       },
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6203,7 +6191,7 @@
       "metadata": {
         "id": "fRb2KD35iZWJ"
       },
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -6224,7 +6212,7 @@
         "id": "w9xQAGZYibbQ",
         "outputId": "9a19cb67-6cd1-48ae-cdf5-6c0bb5e68560"
       },
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -6294,7 +6282,7 @@
         "id": "1wE7NavuicaN",
         "outputId": "b4910d98-8f7f-4cbb-9660-c1e4f26623b5"
       },
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -6321,7 +6309,7 @@
         "id": "dMOOlJYgid_g",
         "outputId": "a2316fb1-b2df-4f64-b347-1d884e923b7b"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -6350,7 +6338,7 @@
         "id": "03hn8uGOwIiT",
         "outputId": "faf8b96d-9524-479b-df97-2817c37f3a9d"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
